Fixed logger error that caused the app to crash.