@@ -17,6 +17,10 @@ order: 1 # The V1.9.0 changelog was released on the same day. So we want to make
 This changelog will contain all change from 1.9.0 onwards before the next major version.
 !!!
 
+==- Version 1.9.18
+- Fixed a bug where the app would not launch when folder permissions were incorrect.
+- Fixed the main menu not loading when last update time was not a time string.
+
 ==- Version 1.9.17
 - Fixed a crash caused by the logger when `log.txt` was already open.
 
